# googly-blocks

./: .gitignore  Cargo.toml  LICENSE.GPL3  README.md  TODO.md  build.rs
assets/: NotoSans-Bold.bmfa  background.atlas  block_textures.atlas  googly_blocks.bmfa  title.atlas  ui_panel.atlas
gl_help/: Cargo.toml
gl_help/src/: lib.rs
shaders/: background.frag.glsl  background.vert.glsl  board.frag.glsl  board.vert.glsl  game_board.frag.glsl  game_board.vert.glsl
shaders/330/: background_panel.vert.glsl  playing_field.frag.glsl  playing_field.vert.glsl  playing_field_background.vert.glsl  text_panel.frag.glsl  text_panel.vert.glsl  ui_panel.frag.glsl  ui_panel.vert.glsl
shaders/460/: background.vert.glsl  background_panel.vert.glsl  board.vert.glsl  game_over.vert.glsl  next_piece_panel.vert.glsl  playing_field.frag.glsl  playing_field.vert.glsl  text_panel.frag.glsl  text_panel.vert.glsl  textbox.frag.glsl  textbox_background.vert.glsl  textbox_element.frag.glsl  ui_panel.vert.glsl
src/: block.rs  board.rs  camera.rs  flash_state_machine.rs  flashing_state_machine.rs  gl_backend.rs  gl_help.rs  gl_helpers.rs  input.rs  macros.rs  main.rs  mesh.rs  next_block.rs  obj.rs  playing_field.rs  playing_field_state_machine.rs  ring_buffer.rs  score.rs  timer.rs  title_screen_state_machine.rs
