[package]
name = "googly-blocks"
version = "0.3.46"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
build = "build.rs"

[dependencies]
glfw = "0.37.0"
log = "0.4.8"
toml = "0.4.8"
rand = "0.7.3"
bmfa = { git = "https://github.com/lambdaxymox/bmfa" }
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
lean_cgmath = { git = "https://github.com/lambdaxymox/lean-cgmath" }
teximage2d = { git = "https://github.com/lambdaxymox/teximage2d" }
tex_atlas = { git = "https://github.com/lambdaxymox/tex_atlas" }

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev]
debug = true

[features]
build_for_install = []
