[package]
name = "googly-blocks"
version = "0.3.94"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
glfw = "0.45.0"
log = "0.4.17"
toml = "0.5.9"
rand = "0.8.5"
bmfa = { git = "https://github.com/lambdaxymox/bmfa" }
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
cglinalg = { git = "https://github.com/lambdaxymox/cglinalg" }
tex_atlas = { git = "https://github.com/lambdaxymox/tex_atlas" }

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev]
debug = true

[features]
build_for_install = []
